<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/card_padding">

    <TextView
        android:id="@+id/text_order_by_title"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:text="@string/sort_order_by"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_order_by"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chip_name"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="@id/text_order_by_title"
        app:layout_constraintTop_toBottomOf="@id/text_order_by_title">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_order_by_name" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_order_by_modified" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/text_order_title"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_h3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/chip_group_order_by"
        app:layout_constraintTop_toBottomOf="@id/chip_group_order_by" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_order"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chip_ascending"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="@id/text_order_title"
        app:layout_constraintTop_toBottomOf="@id/text_order_title">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_order_ascending" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_order_descending" />
    </com.google.android.material.chip.ChipGroup>

    <ViewFlipper
        android:id="@+id/flipper_apply"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_order">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_apply_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/sort_apply" />

        <ProgressBar
            android:id="@+id/progress_sort"
            android:layout_width="@dimen/progress_size"
            android:layout_height="@dimen/progress_size"
            android:layout_gravity="center" />
    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>
